--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,10 @@
         }
     ],
     "require": {
-        "php": ">=5.4"
+        "php": ">=5.4",
+        "doctrine/cache": "~1.3.0",
+        "doctrine/orm": "~2.4.0",
+        "andytruong/event": "~0.1.0"
     },
     "autoload": {
         "psr-4": {
