--- a/composer.json
+++ b/composer.json
@@ -13,9 +13,10 @@
     ],
     "require": {
         "php": ">=5.4",
+        "andytruong/event": "~0.1.0",
         "doctrine/cache": "~1.3.0",
         "doctrine/orm": "~2.4.0",
-        "andytruong/event": "~0.1.0"
+        "luracast/restler": "~3.0.0"
     },
     "autoload": {
         "psr-4": {
