--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,9 @@
         "php": ">=5.4",
         "andytruong/event": "~0.1.0",
         "doctrine/cache": "~1.3.0",
-        "doctrine/orm": "~2.4.0",
+        "doctrine/orm": "~2.4.0"
+    },
+    "require-dev": {
         "luracast/restler": "~3.0.0"
     },
     "autoload": {
