--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,8 @@ matrix:
 
 before_script:
     - composer install --prefer-source
+    - touch files/salemapp.test.sqlite
+    - chmod a+w files/salemapp.test.sqlite
 
 script: phpunit --coverage-text
 
