--- a/.travis.yml
+++ b/.travis.yml
@@ -5,10 +5,11 @@ php:
     - 5.5
     - 5.6
     - hhvm
+    - hhvm-nightly
 
 matrix:
     allow_failures:
-        - php: hhvm-nightly
+        - php: [hhvm, hhvm-nightly]
     fast_finish: true
 
 before_script:
