--- a/.travis.yml
+++ b/.travis.yml
@@ -5,11 +5,10 @@ php:
     - 5.5
     - 5.6
     - hhvm
-    - hhvm-nightly
 
 matrix:
     allow_failures:
-        - php: [hhvm, hhvm-nightly]
+        - php: hhvm
     fast_finish: true
 
 before_script:
