--- a/composer.json
+++ b/composer.json
@@ -13,14 +13,16 @@
     ],
     "require": {
         "php": ">=5.4",
+        "andytruong/common": "0.1.*@dev",
         "andytruong/event": "~0.1.0",
         "doctrine/cache": "~1.3.0",
         "doctrine/orm": "~2.4.0",
+        "phpoption/phpoption": "~1.4.0",
         "psr/log": "~1.0.0",
-        "andytruong/common": "0.1.*@dev"
+        "symfony/http-foundation": "~2.5.0",
+        "symfony/http-kernel": "~2.5.0"
     },
     "require-dev": {
-        "luracast/restler": "~3.0.0"
     },
     "autoload": {
         "psr-4": {
