--- a/composer.json
+++ b/composer.json
@@ -19,10 +19,9 @@
         "doctrine/orm": "~2.4.0",
         "phpoption/phpoption": "~1.4.0",
         "psr/log": "~1.0.0",
+        "symfony/config": "~2.5.0",
         "symfony/http-foundation": "~2.5.0",
         "symfony/http-kernel": "~2.5.0"
-    },
-    "require-dev": {
     },
     "autoload": {
         "psr-4": {
